coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -286,7 +286,18 @@ paths:
         - $ref: '#/parameters/asUser'
         - in: body
           name: xml
-          description: Job properties in XML
+          description: |
+            A job described in XML. For an example:
+
+            ```xml
+            <Job>
+              <Tasks>
+                <Task CommandLine="hostname" MinCores="1" MaxCores="1" />
+              </Tasks>
+            </Job>
+            ```
+
+            Note that since the server accepts input in JSON, the XML has to be encoded in a JSON string.
           schema:
             type: string
       responses:
