coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -537,7 +537,8 @@ paths:
         - in: query
           name: $filter
           type: string
-          description: Filter tasks by specified filters. A filter is in the form of "<name>20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _TaskState_, _ChangeTimeFrom_, _TaskStates_, _TaskIds_ and _TaskInstanceIds_.
+          description: |
+            Filter tasks by specified filters. A filter is in the form of "<name>20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _TaskState_, _ChangeTimeFrom_, _TaskStates_, _TaskIds_ and _TaskInstanceIds_.
           x-ms-parameter-location: method
         - in: query
           name: sortTasksBy
