coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -75,7 +75,7 @@ paths:
           name: $filter
           type: string
           description: |
-            Filter result by specified filters. A filter is in the form of "<name>20eq%20<value>". Now the only available filter is _NodeState_.
+            Filter result by specified filters. A filter is in the form of "<name>%20eq%20<value>". Now the only available filter is _NodeState_.
           x-ms-parameter-location: method
         - in: query
           name: sortNodesBy
@@ -217,7 +217,7 @@ paths:
           name: $filter
           type: string
           description: |
-            Filter jobs by specified filters. A filter is in the form of "<name>20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _JobState_, _NodeGroup_ and _ChangeTimeFrom_.
+            Filter jobs by specified filters. A filter is in the form of "<name>%20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _JobState_, _NodeGroup_ and _ChangeTimeFrom_.
           x-ms-parameter-location: method
         - in: query
           name: sortJobsBy
@@ -539,7 +539,7 @@ paths:
           name: $filter
           type: string
           description: |
-            Filter tasks by specified filters. A filter is in the form of "<name>20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _TaskState_, _ChangeTimeFrom_, _TaskStates_, _TaskIds_ and _TaskInstanceIds_.
+            Filter tasks by specified filters. A filter is in the form of "<name>%20eq%20<value>", and multiple filters can be ANDed like "<filter1>%20and%20<filter2>…". Available filter names are _TaskState_, _ChangeTimeFrom_, _TaskStates_, _TaskIds_ and _TaskInstanceIds_.
           x-ms-parameter-location: method
         - in: query
           name: sortTasksBy
