coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -204,8 +204,9 @@ paths:
         - in: path
           name: operation
           type: string
-          description: The operation to do. The available ones are "online", "offline".
+          description: The operation to do.
           required: true
+          enum: [online, offline]
         - in: body
           name: nodeNames
           schema: 
