coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -209,6 +209,7 @@ paths:
           enum: [online, offline]
         - in: body
           name: nodeNames
+          required: true
           schema: 
             type: array
             items:
