coin8086/HPC-Pack-2016:2016-11-01.5.3

--- a/src/hpcpack.yaml
+++ b/src/hpcpack.yaml
@@ -82,6 +82,9 @@ paths:
     get:
       summary: Get Cluster Job Metrics
       description: Get cluster job metrics for the last 7 days.
+      operationId: getClusterJobMetrics
+      parameters:
+        - $ref: '#/parameters/asUser'
       responses:
         200:
           description: OK
@@ -110,6 +113,9 @@ paths:
     get:
       summary: Get Cluster Node Availability
       description: Get cluster node availability.
+      operationId: getClusterNodeAvailability
+      parameters:
+        - $ref: '#/parameters/asUser'
       responses:
         200:
           description: OK
